Fixed some layout issues in setup

--- a/phpmyfaq/admin/assets/scss/style.scss
+++ b/phpmyfaq/admin/assets/scss/style.scss
@@ -19,3 +19,21 @@
 
 // phpMyFAQ colors
 @import "colors";
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+}
